--- a/Languages/Russian/DefInjected/ScenarioDef/Scenarios_Civil_Crashlanded.xml
+++ b/Languages/Russian/DefInjected/ScenarioDef/Scenarios_Civil_Crashlanded.xml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <ABF_Scenario_Synstruct_Crashlanded.label>Crashlanding Synstructs</ABF_Scenario_Synstruct_Crashlanded.label>
-  <ABF_Scenario_Synstruct_Crashlanded.description>You completed system initialization right before breaking atmosphere in what seems to be an escape pod. Memory banks for recent data are blank, and there are no files indicating recent purpose, directive, or history. You are intact - that will suffice for now.</ABF_Scenario_Synstruct_Crashlanded.description>
-  <ABF_Scenario_Synstruct_Crashlanded.scenario.name>Crashlanding Synstructs</ABF_Scenario_Synstruct_Crashlanded.scenario.name>
-  <ABF_Scenario_Synstruct_Crashlanded.scenario.summary>Three crashlanded synstructs - the classic RimWorld experience with an artificial twist.</ABF_Scenario_Synstruct_Crashlanded.scenario.summary>
-  <ABF_Scenario_Synstruct_Crashlanded.scenario.description>You completed system initialization right before breaking atmosphere in what seems to be an escape pod. Memory banks for recent data are blank, and there are no files indicating recent purpose, directive, or history. You are intact - that will suffice for now.</ABF_Scenario_Synstruct_Crashlanded.scenario.description>
-  <ABF_Scenario_Synstruct_Crashlanded.scenario.parts.18.text>The crash site is marked by organic life and broken ship parts. A life-sustaining planet. If life can survive here, so can you. The mystery of why you have no memory at all and how you got here will have to go unanswered.</ABF_Scenario_Synstruct_Crashlanded.scenario.parts.18.text>
+  <ABF_Scenario_Synstruct_Crashlanded.label>Аварийная посадка синтоидов</ABF_Scenario_Synstruct_Crashlanded.label>
+  <ABF_Scenario_Synstruct_Crashlanded.description>Вы завершили инициализацию ядра прямо перед тем, как войти в атмосферу планеты. Банки памяти последних данных пусты, и нет файлов, указывающих на назначение или вашу историю. Вы невредимы — этого пока достаточно.</ABF_Scenario_Synstruct_Crashlanded.description>
+  <ABF_Scenario_Synstruct_Crashlanded.scenario.name>Аварийная посадка синтоидов</ABF_Scenario_Synstruct_Crashlanded.scenario.name>
+  <ABF_Scenario_Synstruct_Crashlanded.scenario.summary>Трое выживших синтоида, совершивших аварийную посадку — классический сценарий RimWorld с искусственными пешками.</ABF_Scenario_Synstruct_Crashlanded.scenario.summary>
+  <ABF_Scenario_Synstruct_Crashlanded.scenario.description>Вы завершили инициализацию ядра прямо перед тем, как войти в атмосферу планеты. Банки памяти последних данных пусты, и нет файлов, указывающих на назначение или вашу историю. Вы невредимы — этого пока достаточно.</ABF_Scenario_Synstruct_Crashlanded.scenario.description>
+  <ABF_Scenario_Synstruct_Crashlanded.scenario.parts.18.text>Место аварии имеет поблизости органическую жизнь и сломанные части корабля. Планета пригодна для жизни. Если жизнь здесь может выжить, то и вы сможете. Загадка, почему у вас нет памяти и как вы сюда попали, останется без ответа.</ABF_Scenario_Synstruct_Crashlanded.scenario.parts.18.text>
 
 
 </LanguageData>
