--- a/Languages/Russian/DefInjected/AlienRace.ThingDef_AlienRace/AlienRace_SynstructSimpleton.xml
+++ b/Languages/Russian/DefInjected/AlienRace.ThingDef_AlienRace/AlienRace_SynstructSimpleton.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <ABF_Thing_Synstruct_Simpleton.label>synstruct simpleton</ABF_Thing_Synstruct_Simpleton.label>
-  <ABF_Thing_Synstruct_Simpleton.description>Synstruct simpletons are widely derided by everyone who meets them. Every aspect of them is designed to be as minimalistic and simple as possible - and not in a good way. Other sapient synstructs are especially hostile toward sapient simpletons, seeing them as an insult to their kind. Simpletons are usually created only out of desperation or cruelty. Sapient simpletons often embrace the wretchedness of their existence and seek to prove themselves equals to others or go on paths of wrathful vengeance against their creators. Simpleton drones, of course, do not pay any heed to their own wellbeing, being incapable of thought as they are.\n\nSynstruct simpletons may be formatted into the following types:\n - Drones\n - Reprogrammable drones\n - Sapients</ABF_Thing_Synstruct_Simpleton.description>
-  <ABF_Thing_Synstruct_Simpleton.tools.0.label>right fist</ABF_Thing_Synstruct_Simpleton.tools.0.label>
-  <ABF_Thing_Synstruct_Simpleton.tools.1.label>left fist</ABF_Thing_Synstruct_Simpleton.tools.1.label>
-  <ABF_Thing_Synstruct_Simpleton.tools.2.label>head</ABF_Thing_Synstruct_Simpleton.tools.2.label>
+  <ABF_Thing_Synstruct_Simpleton.label>синтоид простак</ABF_Thing_Synstruct_Simpleton.label>
+  <ABF_Thing_Synstruct_Simpleton.description>Синтоиды простаки вызывают насмешки у всех, кто с ними встречается. Каждый их аспект разработан так, чтобы быть максимально минималистичным и простым — не в хорошем смысле. Другие синтоиды особенно враждебно относятся к синтоидам простакам, считая их оскорблением своего вида. Простаков обычно создают только от отчаяния или жестокости. Разумные простаки часто принимают убогость своего существования и стремятся доказать, что они равны другим, либо встают на путь гневной мести своим создателям. Простаки дроны, конечно, не обращают внимания на собственное благополучие, будучи неспособными к размышлениям.\n\nСинтоиды простаки могут быть отформатированы в следующие типы:\n — Дроны\n — Перепрограммируемые дроны\n — Синтоиды</ABF_Thing_Synstruct_Simpleton.description>
+  <ABF_Thing_Synstruct_Simpleton.tools.0.label>правый кулак</ABF_Thing_Synstruct_Simpleton.tools.0.label>
+  <ABF_Thing_Synstruct_Simpleton.tools.1.label>левый кулак</ABF_Thing_Synstruct_Simpleton.tools.1.label>
+  <ABF_Thing_Synstruct_Simpleton.tools.2.label>голова</ABF_Thing_Synstruct_Simpleton.tools.2.label>
 
 
 </LanguageData>
