--- a/Languages/Russian/DefInjected/FactionDef/Factions_Player.xml
+++ b/Languages/Russian/DefInjected/FactionDef/Factions_Player.xml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <ABF_Faction_Synstruct_Player_Offworlder.label>New Synstruct Arrivals</ABF_Faction_Synstruct_Player_Offworlder.label>
-  <ABF_Faction_Synstruct_Player_Offworlder.description>A colony of recently-arrived synstruct arrivals.</ABF_Faction_Synstruct_Player_Offworlder.description>
-  <ABF_Faction_Synstruct_Player_Offworlder.pawnsPlural>colonists</ABF_Faction_Synstruct_Player_Offworlder.pawnsPlural>
+  <ABF_Faction_Synstruct_Player_Offworlder.label>Новое Поселение Синтоидов</ABF_Faction_Synstruct_Player_Offworlder.label>
+  <ABF_Faction_Synstruct_Player_Offworlder.description>Колония недавно прибывших синтоидов.</ABF_Faction_Synstruct_Player_Offworlder.description>
+  <ABF_Faction_Synstruct_Player_Offworlder.pawnsPlural>поселенцы</ABF_Faction_Synstruct_Player_Offworlder.pawnsPlural>
 
 
 </LanguageData>
