--- a/Languages/Russian/DefInjected/ResearchProjectDef/ResearchProjects_3_Standardization.xml
+++ b/Languages/Russian/DefInjected/ResearchProjectDef/ResearchProjects_3_Standardization.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <ABF_ResearchProject_Synstruct_BasicCivil.label>civil synstructs</ABF_ResearchProject_Synstruct_BasicCivil.label>
-  <ABF_ResearchProject_Synstruct_BasicCivil.description>Assemble civilian synstructs to fill out the colony population.</ABF_ResearchProject_Synstruct_BasicCivil.description>
+  <ABF_ResearchProject_Synstruct_BasicCivil.label>коалиция синтоидов</ABF_ResearchProject_Synstruct_BasicCivil.label>
+  <ABF_ResearchProject_Synstruct_BasicCivil.description>Соберите гражданских синтоидов, чтобы пополнить население колонии.</ABF_ResearchProject_Synstruct_BasicCivil.description>
 
 
 </LanguageData>
